# tpu-mlir

./: .editorconfig  .gitignore  .style.yapf  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_Tutorial.md  README_cn.md  SECURITY.md  build.sh  c.c  design.md  envsetup.fish  envsetup.sh  pyproject.toml  release.sh  release_doc.sh  release_pip.sh  requirements.txt
bindings/: CMakeLists.txt
bindings/chiprunner/: CMakeLists.txt  alone.cmake  atomic_exec.cpp  integrated.cmake
bindings/kld/: CMakeLists.txt  calibration_math.cpp
bindings/pyfinalmlir/: CMakeLists.txt  pyfinalmlir.cpp  pyfinalmlir.h
bindings/pymlir/: CMakeLists.txt  pycuda.cpp  pycuda.h  pymlir.cpp  pymlir.h  pymodule.cpp  pymodule.h
bindings/pyruntime/: CMakeLists.txt  pyruntime.cpp  pyruntime_bm.cpp  pyruntime_cvi.cpp  pyruntime_tpuv7.cpp
bindings/python/: CMakeLists.txt  pymlir.cpp
lib/: CMakeLists.txt  InitAll.cpp  ModuleInterpreter.cpp
lib/Backend/: Arch.cpp  BM1684.cpp  CMakeLists.txt  Context.cpp  ContextBM1684.cpp
lib/Builder/: CMakeLists.txt  bmodel.cpp
lib/CAPI/: CMakeLists.txt  Dialects.cpp  RegisterEverything.cpp
lib/Conversion/: CMakeLists.txt  TopTFLiteToTpu.cpp
lib/Dialect/: CMakeLists.txt
lib/Interfaces/: CMakeLists.txt  CodegenInterface.cpp  DynGlobalGenInterface.cpp  DynLocalGenInterface.cpp  EltwiseInterface.cpp  FlopsInterface.cpp  GlobalGenInterface.cpp  IndexingMapsInterface.cpp  InferenceInterface.cpp  InplaceInterface.cpp  LayerGroupInterface.cpp  LocalGenInterface.cpp  LoweringInterface.cpp  QuantizeInterface.cpp  ShapeInterface.cpp  TypeInterface.cpp  WeightReorderInterface.cpp
lib/PplBackend/: .md5  CMakeLists.txt  Dynkernel.cmake  Readme.md  build.sh  download_toolchain.sh  gen_header copy.sh
lib/Support/: ActiveUtils.cpp  CMakeLists.txt  CastUtils.cpp  DeformConv2D.cpp  DnnlConv.cpp  DnnlMatMul.cpp  DnnlPool.cpp  Float16.cpp  Float4.cpp  Float8.cpp  GenericCpuFunc.cpp  GmemAllocator.cpp  GmemAllocatorMethod.cpp  Int8.cpp  LutFunc.cpp  MathUtils.cpp  Module.cpp  ModuleHelper.cpp  ModuleInterpreter.cpp  Pattern.cpp  Patterns.cpp  PixelHelper.cpp  RewriterConfigUtils.cpp  TPUCompressUtil.cpp  TPUNnvlcUtil.cpp  TensorFile.cpp  Utils.cpp  bitcasts.h  fp16_bf16.cpp
lib/Traits/: CMakeLists.txt  Traits.cpp
python/: CMakeLists.txt
python/PerfAI/: PerfAI.sh
python/calibration/: cali_math.py  data_driven_runner.py  data_selector.py  gen_data_list.py  kld_calibrator.py  learning_quant.py  mix_precision.py  model_modifier.py  search_qtable.py  search_threshold.py  sensitive_layer.py  shape_ops.py  simple_tunner.py  smoothquant.py  softmax_correction.py  transformer_pattern.py  utils.py
python/data/: preprocess.py
python/debugger/: atomic_dialect.py  bmodel_fbs.py  cmodel.py  context.py  debug_base.py  disassembler.py  final_mlir.py  lazy_mlir_ir.py  op_support.py  opdef_1684.py  opdef_1684x.py  opdef_1686.py  opdef_1688.py  opparam_1684.py  opparam_1684x.py  opparam_1686.py  opparam_1688.py  pmu_support.py  regdef_1684.py  regdef_1688.py  static_check.py  tdb_support.py  xlsx_to_py.py
python/eval/: model_inference.py
python/llm/: Chatglm3Converter.py  GLM4VConverter.py  Gemma3Converter.py  InternVL3Converter.py  JanusConverter.py  LFM2VLConverter.py  Llama3_2VConverter.py  LlmConverter.py  LlmInfo.py  LlmLoad.py  LlmProfile.py  MiniCPMV4Converter.py  PaddleOCRVLConverter.py  Phi3Converter.py  Qwen2VLConverter.py  Qwen2_5OConverter.py  Qwen2_5VLConverter.py  Qwen3AsrConverter.py  Qwen3VLConverter.py  Qwen3_5Converter.py
python/mlir_ast/: README.md  __init__.py  mlir_ast.py  nodes.py
python/numpy_helper/: __init__.py  npz_cali_test.py  npz_compare.py  npz_dump.py  npz_predict.py  npz_statistic.py  npz_visualize_diff.py  tensor_compare.py
python/profile_helper/: __init__.py  bm1684_defs.py  bm1684x_defs.py  bm1688_defs.py  bm1690_defs.py  bmprofile_common.py  bmprofile_generator.py  bmprofile_layergroup.py  bmprofile_parser.py  bmprofile_perfAI.py  bmprofile_perfAI_2260.py  bmprofile_utils.py  cv184x_defs.py  interface.py  mars3_defs.py  op_support.py  opdef_1684x.py  opparam_1684x.py  opparam_1690.py
python/profiler/: firefox.py  timing.py  type_def.py
python/samples/: classify_DenseNet.py  classify_LeNet.py  classify_efficientnet.py  classify_inception_v3.py  classify_mobilenet_v2.py  classify_resnet18.py  classify_resnet50.py  classify_resnext50.py  classify_se-resnet50.py  classify_shufflenet.py  classify_squeezenet.py  classify_vgg16.py  classify_xception.py  detect_pp_picodet.py  detect_pp_yoloe.py  detect_pp_yolov3.py  detect_pp_yolox.py  detect_retinaface.py  detect_ssd-12.py  detect_ultraface.py  detect_yolov3.py  detect_yolov5.py  seg_humanseg.py  segment_yolo.py  segmentation_humanseglite.py
python/test/: README.txt  extract_op.py  run_chunk_gated_delta_rule.py  run_recurrent_gated_delta_rule.py  test_MaskRCNN.py  test_mlir.py  test_onnx.py  test_pytorch.py  test_tflite.py  test_torch.py  test_tpulang.py
python/tools/: assign_output.py  bmodel_checker.py  bmodel_combine.py  bmodel_dis.py  bmodel_dumper.py  bmodel_infer.py  bmodel_truncater.py  bmrt_test.py  code_stripper.py  compare_visualizer.py  compare_visualizer_demo.ipynb  debugit.py  deploy_qat.py  duration_BW_usage_statistics.py  fp_forward.py  gen_layer_group_config.py  gen_rand_input.py  gen_rewriter_config.py  gen_shell.py  layergroup_lmem_assign_visualizer.ipynb  llm_analyse.py  llm_convert.py  llm_model.py  logdebug_tool.py  mlir2graph.py  mlir2onnx.py  mlir_analyse.py  mlir_cut.py  mlir_to_excel.py  mlir_truncio.py  model_convert.py  model_deploy.py  model_eval.py  model_eval_imagenet.py  model_inference_cpu.py  model_runner.py  model_transform.py  npz_tool.py  op_locator.py  pmu_dump.py  (+15 more)
test/: CMakeLists.txt  README.md  lit.cfg.py  lit.site.cfg.py.in  llvm-lit.cmake  test.bmodel.compiler_profile_0.txt  test.bmodel.json  test.bmodel.net_0.profile  test.mlir  test.npz  test.sh  test_bm1684x_f32_final.mlir  test_bm1684x_f32_tpu.mlir  test_model.prototxt  test_model_in_f32.npz  test_origin.mlir  test_tpu_addressed_bm1684x_f32_weight.npz
unittests/: CMakeLists.txt
(+4127 files in other folders)
