[project]
name = "tpu-mlir-dev"
version = "0.0.0"
description = "uv-managed development environment for the TPU-MLIR source tree"
requires-python = ">=3.10,<3.11"
dependencies = []

[dependency-groups]
base = [
  "argcomplete==3.1.1",
  "GitPython==3.1.32",
  "graphviz==0.20.1",
  "grpcio==1.56.2",
  "Jinja2==3.1.2",
  "jsonschema==4.18.4",
  "kaleido==0.2.1",
  "lmdb==1.4.1",
  "matplotlib==3.7.2",
  "networkx==3.1",
  "numpy==1.24.3",
  "opencv-contrib-python==4.8.0.74",
  "opencv-python-headless==4.8.0.74",
  "packaging==23.1",
  "pandas==2.0.3",
  "paramiko==3.2.0",
  "Pillow==10.0.0",
  "plotly==5.15.0",
  "protobuf==3.20.3",
  "pycocotools==2.0.11",
  "pydantic==2.11.3",
  "PyYAML==6.0.1",
  "python-dateutil==2.8.2",
  "python-gflags==3.1.2",
  "scikit-image==0.21.0",
  "scikit-learn==1.6.1",
  "scipy==1.11.1",
  "termcolor==2.3.0",
  "tqdm==4.65.0",
  "transformers==5.3.0",
  "onnxruntime_extensions==0.14.0",
  "openpyxl==3.1.5",
  "loguru==0.7.3",
  "ansible==10.7.0",
  "diffusers==0.33.1",
]
onnx = [
  "onnx==1.14.1",
  "onnxruntime==1.16.3",
  "onnxsim==0.4.17",
]
torch = [
  "torch==2.1.0+cpu",
  "torchaudio==2.1.0+cpu",
  "torchvision==0.16.0+cpu",
]
tensorflow = [
  "tf2onnx==1.8.4",
  "astunparse==1.6.3",
  "flatbuffers==24.12.23",
  "tensorboard==2.13.0",
]
caffe = [
  "six==1.16.0",
]
paddle = [
  "paddle2onnx==1.0.8",
  # The older 2.5.0 wheel is no longer available for the supported uv target.
  "paddlepaddle==2.6.2",
]
build = [
  "build==1.0.3",
  "Cython==3.0.0",
  "pybind11-global==2.11.1",
  "setuptools==59.6.0",
  "twine==4.0.2",
  "wheel",
]
docs = [
  "rst2pdf==0.100",
  "Sphinx==6.2.1",
  "sphinx-autobuild==2021.3.14",
  "sphinx-rtd-theme==1.2.2",
]
notebook = [
  "ipykernel==6.24.0",
  "ipython==8.14.0",
  "jedi==0.18.2",
  "jupyterlab==4.0.3",
]
web = [
  "dash==2.11.1",
  "dash-bootstrap-components==1.4.2",
  "dash_cytoscape==0.3.0",
  "dash-draggable==0.1.2",
  "dash-split-pane==1.0.0",
  "dash-table==5.0.0",
]
test = [
  "enum34==1.1.10",
  "lit==16.0.6",
  "nose==1.3.7",
  "pytest==8.3.5",
  "pytest-timeout==2.3.1",
  "pytest-xdist==3.3.1",
]
all = [
  { include-group = "base" },
  { include-group = "onnx" },
  { include-group = "torch" },
  { include-group = "tensorflow" },
  { include-group = "caffe" },
  { include-group = "paddle" },
  { include-group = "build" },
  { include-group = "docs" },
  { include-group = "notebook" },
  { include-group = "web" },
  { include-group = "test" },
]

[tool.uv]
package = false
default-groups = "all"
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.10'"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
