[project]
name = "tpu-mlir-dev"
version = "0.0.0"
description = "TPU-MLIR development environment managed by uv"
requires-python = "==3.10.*"
dependencies = [
    "numpy==1.24.3",
    "scipy==1.11.1",
    "tqdm==4.65.0",
    "Pillow==10.0.0",
    "plotly==5.15.0",
    "opencv-python-headless==4.8.0.74",
    "protobuf==3.20.3",
    "graphviz==0.20.1",
    "pycocotools==2.0.6",
    "scikit-image==0.21.0",
    "transformers==5.3.0",
    "scikit-learn==1.6.1",
    "onnxruntime_extensions==0.14.0",
    "pandas==2.0.3",
]

[dependency-groups]
dev = [
    "ansible==10.7.0",
    "argcomplete==3.1.1",
    "build==1.0.3",
    "Cython==3.0.0",
    "dash==2.11.1",
    "dash-bootstrap-components==1.4.2",
    "dash-draggable==0.1.2",
    "dash-split-pane==1.0.0",
    "dash-table==5.0.0",
    "dash_cytoscape==0.3.0",
    "diffusers==0.33.1",
    "enum34==1.1.10",
    "GitPython==3.1.32",
    "grpcio==1.56.2",
    "ipykernel==6.24.0",
    "ipython==8.14.0",
    "jedi==0.18.2",
    "Jinja2==3.1.2",
    "jsonschema==4.18.4",
    "jupyterlab==4.0.3",
    "kaleido==0.2.1",
    "leveldb==0.201",
    "lit==16.0.6",
    "lmdb==1.4.1",
    "loguru==0.7.3",
    "matplotlib==3.7.2",
    "networkx==3.1",
    "nose==1.3.7",
    "openpyxl==3.1.5",
    "packaging==23.1",
    "paramiko==3.2.0",
    "pydantic==2.11.3",
    "pytest==8.3.5",
    "pytest-timeout==2.3.1",
    "pytest-xdist==3.3.1",
    "PyYAML==6.0.1",
    "python-dateutil==2.8.2",
    "python-gflags==3.1.2",
    "rst2pdf==0.100",
    "setuptools==59.6.0",
    "Sphinx==6.2.1",
    "sphinx-autobuild==2021.3.14",
    "sphinx-rtd-theme==1.2.2",
    "termcolor==2.3.0",
    "twine==4.0.2",
    "wheel",
]
onnx = [
    "onnx==1.14.1",
    "onnxsim==0.4.17",
]
tensorflow = [
    "astunparse==1.6.3",
    "flatbuffers==24.12.23",
    "tensorboard==2.16.2",
    "tensorflow==2.16.1",
    "tf2onnx==1.8.4",
]
caffe = [
    "six==1.16.0",
]
paddle = [
    "paddle2onnx==1.0.8",
    "paddlepaddle==2.6.2",
]
torch-cpu = [
    "onnxruntime==1.16.3",
    "torch==2.1.0+cpu",
    "torchaudio==2.1.0+cpu",
    "torchvision==0.16.0+cpu",
]
torch-gpu = [
    "cupy-cuda12x",
    "fast_histogram==0.14",
    "onnxruntime-gpu==1.22.0",
    "torch==2.1.0+cu121",
    "torchaudio==2.1.0+cu121",
    "torchvision==0.16.0+cu121",
]

[tool.uv]
default-groups = ["dev", "onnx", "tensorflow", "caffe", "paddle", "torch-cpu"]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
conflicts = [
    [
        { group = "torch-cpu" },
        { group = "torch-gpu" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", group = "torch-cpu" },
    { index = "pytorch-cu121", group = "torch-gpu" },
]
torchaudio = [
    { index = "pytorch-cpu", group = "torch-cpu" },
    { index = "pytorch-cu121", group = "torch-gpu" },
]
torchvision = [
    { index = "pytorch-cpu", group = "torch-cpu" },
    { index = "pytorch-cu121", group = "torch-gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
